# errore

./: Cargo.toml  README.md
cli/: rerr_gen.rs
src/: error.rs  kind.rs  lib.rs
