[package]
name = "errore"
version = "1.0.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const-fnv1a-hash = "1.1.0"
log = "0.4.22"
once_cell = "1.19.0"
ctor = "0.2.8"
clap = {version = "4.5.9", features = ["derive"]}
pretty_env_logger = "0.5.0"

[[bin]]
name = "errore-gen"
path = "cli/rerr_gen.rs"